# SimpleSSD

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODINGSTYLE.md  Latency.cc  Latency.h  LatencyMLC.h  LatencySLC.h  LatencyTLC.h  PAL2.cc  PAL2.h  PAL2_TimeSlot.h  PALStatistics.cc  PALStatistics.h  README.md  SConscript  SimpleSSD_types.h  base_config.cc  base_config.hh  ftl.cc  ftl.hh  ftl_block.hh  ftl_command.hh  ftl_defs.hh  ftl_hybridmapping.cc  ftl_mappingtable.cc  ftl_mappingtable.hh  ftl_statistics.cc  ini.h
config/: 512GB_micron.xml  sample.cfg  sample.xml
cpu/: SConscript  config.cc  config.hh  cpu.cc  cpu.hh  def.hh
cpu/generator/: analyse.py  compile.py  functions.py  generate.py  insts.py
dram/: SConscript  abstract_dram.cc  abstract_dram.hh  config.cc  config.hh  simple.cc  simple.hh
fil/: abstract_fil.hh  abstract_nvm.hh  config.cc  config.hh  def.hh  fil.cc  fil.hh  request.hh
fil/common/: file.hh
fil/nvm/: abstract_nvm.hh
fil/pal/: Latency.cc  Latency.h  LatencyMLC.cc  LatencyMLC.h  LatencySLC.cc  LatencySLC.h  LatencyTLC.cc  LatencyTLC.h  PAL2.cc  PAL2.h  PAL2_TimeSlot.cc  PAL2_TimeSlot.h  PALStatistics.cc  PALStatistics.h  SimpleSSD_types.h  convert.cc  convert.hh  pal_wrapper.cc  pal_wrapper.hh
fil/scheduler/: abstract_scheduler.hh  noop.cc  noop.hh
ftl/: SConscript  abstract_ftl.hh  config.cc  config.hh  def.cc  def.hh  filling.cc  filling.hh  ftl.cc  ftl.hh  ftl_old.cc  ftl_old.hh  job_manager.cc  job_manager.hh  object.hh  page_mapping.cc  page_mapping.hh
ftl/allocator/: abstract_allocator.cc  abstract_allocator.hh  basic_allocator.cc  basic_allocator.hh  generic_allocator.cc  generic_allocator.hh  two_block_allocator.cc  two_block_allocator.hh  victim_selection.cc  victim_selection.hh  vl_allocator.cc  vl_allocator.hh
ftl/background_manager/: abstract_background_job.cc  abstract_background_job.hh  abstract_job_manager.hh  basic_job_manager.cc  basic_job_manager.hh
ftl/base/: abstract_ftl.cc  abstract_ftl.hh  basic_ftl.cc  basic_ftl.hh  page_level_ftl.cc  page_level_ftl.hh  vlftl.cc  vlftl.hh
ftl/common/: SConscript  block.cc  block.hh  latency.cc  latency.hh
ftl/gc/: abstract_gc.cc  abstract_gc.hh  advanced.cc  advanced.hh  hint.hh  naive.cc  naive.hh  preemption.cc  preemption.hh
ftl/mapping/: abstract_mapping.cc  abstract_mapping.hh  page_level.cc  page_level.hh  page_level_mapping.cc  page_level_mapping.hh  virtually_linked.cc  virtually_linked.hh
ftl/old/: Latency.h  LatencyMLC.cc  LatencySLC.cc  LatencyTLC.cc  PAL2.cc  PAL2.h  PAL2_TimeSlot.cc  PAL2_TimeSlot.h  PALStatistics.cc  PALStatistics.h  SConscript  ftl.cc  ftl.hh  ftl_block.cc  ftl_block.hh  ftl_command.hh  ftl_defs.hh  ftl_hybridmapping.cc  ftl_hybridmapping.hh  ftl_mappingtable.cc  ftl_mappingtable.hh  ftl_statistics.cc  ftl_statistics.hh
ftl/read_reclaim/: abstract_read_reclaim.cc  abstract_read_reclaim.hh  basic_read_reclaim.cc  basic_read_reclaim.hh
ftl/wear_leveling/: abstract_wear_leveling.cc  abstract_wear_leveling.hh  static_wear_leveling.cc  static_wear_leveling.hh
hil/: SConscript  buffer_manager.cc  buffer_manager.hh  command_manager.cc  command_manager.hh  config.cc  config.hh  convert.cc  convert.hh  hil.cc  hil.hh  request.cc  request.hh
hil/common/: dma_engine.cc  dma_engine.hh  interrupt_manager.cc  interrupt_manager.hh
hil/none/: controller.cc  controller.hh  subsystem.cc  subsystem.hh
hil/nvme/: SConscript  abstract_namespace.cc  abstract_namespace.hh  abstract_subsystem.cc  abstract_subsystem.hh  config.cc  config.hh  controller.cc  controller.hh  def.cc  def.hh  dma.cc  dma.hh  dma_engine.cc  dma_engine.hh  interface.hh  namespace.cc  namespace.hh  ocssd.cc  ocssd.hh  queue.cc  queue.hh  queue_arbitrator.cc  queue_arbitrator.hh  subsystem.cc  subsystem.hh
hil/sata/: SConscript  config.cc  config.hh  def.hh  device.cc  device.hh  hba.cc  hba.hh  interface.hh  subsystem.cc  subsystem.hh
hil/ufs/: SConscript  config.cc  config.hh  def.cc  def.hh  device.cc  device.hh  host.cc  host.hh  interface.hh
icl/: SConscript  abstract_cache.cc  abstract_cache.hh  cache.cc  cache.hh  config.cc  config.hh  generic_cache.cc  generic_cache.hh  icl.cc  icl.hh  ring_buffer.cc  ring_buffer.hh  set_associative.cc  set_associative.hh
icl/cache/: abstract_cache.cc  abstract_cache.hh  abstract_tagarray.hh  generic_cache.cc  generic_cache.hh  ring_buffer.cc  ring_buffer.hh  set_associative.cc  set_associative.hh
icl/manager/: abstract_manager.hh  basic.cc  basic.hh  generic_manager.cc  generic_manager.hh  none.cc  none.hh
lib/ini/: ini.c
lib/inih/: SConscript  ini.h
log/: SConscript  log.cc  log.hh  stat.hh  trace.hh
mem/: abstract_ram.hh  config.cc  config.hh  def.hh  mem_config.cc  mem_config.hh  memory_system.cc  memory_system.hh  system.cc  system.hh
mem/dram/: abstract_dram.cc  abstract_dram.hh  controller.cc  controller.hh  gem5.cc  gem5.hh  ideal.cc  ideal.hh  lpddr4.cc  lpddr4.hh  (+2 more)
pal/: SConscript  abstract_pal.hh  config.cc  config.hh  pal.cc  pal.hh  pal_old.cc  pal_old.hh
sim/: SConscript  abstract_controller.hh  abstract_subsystem.cc  abstract_subsystem.hh  base_config.cc  base_config.hh  checkpoint.hh  config.cc  config.hh  config_reader.cc  config_reader.hh  controller.hh  cpu.cc  cpu.hh  dma_interface.hh  engine.hh  event.hh  haradware_object.hh  interface.hh  log.cc  log.hh  object.hh  sim_config.cc  sim_config.hh  simplessd.cc  simplessd.hh  simulator.cc  simulator.hh  state.cc  state.hh  statistics.hh  trace.hh  types.hh  version.cc.in  version.hh
test/: .gitignore  config_reader.cc  debug_arbitrator.diff  main.cc  sorted_map.cc  test_config_reader.cc  test_sorted_map.cc
util/: SConscript  abstract_fifo.cc  abstract_fifo.hh  algorithm.hh  base_config.hh  bitset.cc  bitset.hh  config.cc  config.hh  def.cc  def.hh  disk.cc  disk.hh  drampower.hh  fifo.cc  fifo.hh  hash_table.hh  interface.cc  interface.hh  list.hh  mmap.cc  mmap.hh  path.cc  path.hh  scheduler.hh  simplessd.cc  simplessd.hh  sorted_map.cc  sorted_map.hh  stat_helper.cc  stat_helper.hh  tweak_config.cc  tweak_config.hh  vector.hh
(+145 files in other folders)
